--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,9 @@
 		<shiro.version>1.4.2</shiro.version>
 		<thymeleaf.extras.shiro.version>2.0.0</thymeleaf.extras.shiro.version>
 		<mybatis.spring.boot.starter.version>1.3.2</mybatis.spring.boot.starter.version>
+		<mapper.starter.version>2.0.3-beta1</mapper.starter.version>
 		<pagehelper.spring.boot.starter.version>1.2.5</pagehelper.spring.boot.starter.version>
-		<fastjson.version>1.2.60</fastjson.version>
+		<fastjson.version>1.2.67</fastjson.version>
 		<druid.version>1.1.14</druid.version>
 		<commons.io.version>2.5</commons.io.version>
 		<commons.fileupload.version>1.3.3</commons.fileupload.version>
@@ -91,6 +92,19 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>${mybatis.spring.boot.starter.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-autoconfigure</artifactId>
+			<version>${mybatis.spring.boot.starter.version}</version>
+		</dependency>
+
+		<!--mapper-->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>${mapper.starter.version}</version>
 		</dependency>
 
 		<!-- pagehelper 分页插件 -->
